--- a/LastMinutes/Views/LastMinutes/LandingPage.cshtml
+++ b/LastMinutes/Views/LastMinutes/LandingPage.cshtml
@@ -26,7 +26,7 @@
             <h5>Enter your Last.FM Username Below</h5>
             <p>to see how many minutes you've listened to!</p>
 
-            <form asp-action="CheckMinutes" asp-controller="LastMinutes">
+            <form asp-action="CheckMinutes" asp-controller="LastMinutes" method="POST">
 
                 @if (string.IsNullOrEmpty(Username) && SignedIn == false)
                 {
