--- a/LastMinutes/Views/Shared/_Layout_LandingPage.cshtml
+++ b/LastMinutes/Views/Shared/_Layout_LandingPage.cshtml
@@ -93,7 +93,7 @@
     <footer class="border-top border-dark fixed-bottom footer text-muted bg-dark text-center px-0">
         <div class="container px-0">
             <span class="fw-normal">
-                &copy; 2024 - LastMinutes (@ViewData["AppVersionComplete"]) by <a href="" class="link-secondary text-decoration-none fw-bold goldhover">mrdawgza</a>
+                &copy; 2024 - LastMinutes <a asp-action="ReleaseNotes" asp-controller="LastMinutes" class="link-secondary text-decoration-none fw-bold goldhover">(@ViewData["AppVersionComplete"]) </a> by <a href="" class="link-secondary text-decoration-none fw-bold goldhover">mrdawgza</a>
             </span>
         </div>
     </footer>
