--- a/LastMinutes/Views/LastMinutes/Results/BadScrobbles.cshtml
+++ b/LastMinutes/Views/LastMinutes/Results/BadScrobbles.cshtml
@@ -12,7 +12,7 @@
     <div class="col-12 col-md-10 p-2 text-white">
         <h4 class="my-3">You have @Model.BadScrobbleText</h4>
         
-        <p>
+        <p style="max-height: 700px; overflow-y: auto">
             @foreach (Scrobble scrob in Model.BadScrobbles)
             {
                 <span>
