--- a/LastMinutes/Views/LastMinutes/FaqPage.cshtml
+++ b/LastMinutes/Views/LastMinutes/FaqPage.cshtml
@@ -84,6 +84,13 @@
         </div>
 
         <div class="row my-5">
+            <h5>What about Privacy?</h5>
+            <span>
+                This tool only has access to data which is already accessible publicly. Your result is stored in a database, the only data being stored is your total listening time, top scrobbles and bad scrobbles. That's all. You can also click "Delete Results" which will permanently delete any data relating to you from this tool.
+            </span>
+        </div>
+
+        <div class="row my-5">
             <h5>How can I contact you?</h5>
             <span>
                 You can contact me through Reddit or Last.FM:<br />
