Updated release notes.

--- a/LastMinutes/Views/LastMinutes/ReleaseNotes.cshtml
+++ b/LastMinutes/Views/LastMinutes/ReleaseNotes.cshtml
@@ -22,6 +22,16 @@
     <div class="p-2 px-1 text-white">
 
         <div class="row my-4">
+            <h5>Beta10315c</h5>
+            <span>
+                <ul>
+                    <li>Added backend app status page for monitoring purposes.</li>
+                    <li>The cooldown timer has been reduced to one hour.</li>
+                </ul>
+            </span>
+        </div>
+
+        <div class="row my-4">
             <h5>Beta10315</h5>
             <span>
                 <ul>
