--- a/LastMinutes/Views/LastMinutes/ReleaseNotes.cshtml
+++ b/LastMinutes/Views/LastMinutes/ReleaseNotes.cshtml
@@ -22,6 +22,17 @@
     <div class="p-2 px-1 text-white">
 
         <div class="row my-4">
+            <h5>Beta10318</h5>
+            <span>
+                <ul>
+                    <li>The queue processor now uses Deezer before Spotify since the API is now back to normal.</li>
+                    <li>Results that are over 24 hours old will automatically be deleted.</li>
+                    <li>Added life-time tool stats tracking (such as total runs & total minutes tallied)</li>
+                </ul>
+            </span>
+        </div>
+
+        <div class="row my-4">
             <h5>Beta10315c</h5>
             <span>
                 <ul>
