Removed time frame restrictions.

--- a/LastMinutes/Views/LastMinutes/FaqPage.cshtml
+++ b/LastMinutes/Views/LastMinutes/FaqPage.cshtml
@@ -64,29 +64,9 @@
         </div>
 
         <div class="row my-5">
-            <h5>What <i>special privileges</i> do I get for signing in?</h5>
-            <span>
-                Only accounts which I specify may sign in to access special features. This allows you to view your minutes over many different set time frames:
-                <ul class="my-3">
-                    <li>Over The Last Week</li>
-                    <li>Over The Last Month</li>
-                    <li>Over The Last Year</li>
-                    <li>Over All Time</li>
-                    <li>This Week</li>
-                    <li>This Month</li>
-                    <li>This Year</li>
-                    <li class="text-muted">(it also lets you skip the 24h cooldown)</li>
-                </ul>
-
-                Currently, only my friends have accounts with special privileges. I'm not sure if this is something I'll ever change in the future.<br />
-                Since this app uses a queue system, to prevent unfair usage, and until the track cache grows in size, these extra time frames will not be accessible to the public. Maybe if I like your taste in music I can give you access ;)
-            </span>
-        </div>
-
-        <div class="row my-5">
             <h5>What about Privacy?</h5>
             <span>
-                This tool only has access to data which is already accessible publicly. Your result is stored in a database, the only data being stored is your total listening time, top scrobbles and bad scrobbles. That's all. You can also click "Delete Results" which will permanently delete any data relating to you from this tool.
+                This tool only has access to data which is already accessible publicly. Your result is stored in a database, the only data being stored is your total listening time, top scrobbles and bad scrobbles. That's all. You can also click "Delete Results" which will permanently delete any data relating to you from this tool, otherwise your results will be automatically removed after 24 hours.
             </span>
         </div>
 
