--- a/LastMinutes/Views/LastMinutes/Results/Index.cshtml
+++ b/LastMinutes/Views/LastMinutes/Results/Index.cshtml
@@ -54,7 +54,7 @@
                 <a asp-action="Refresh" asp-controller="LastMinutes" asp-route-Username="@Model.Username" class=" link-secondary text-decoration-none goldhover "><b>Delete Results</a>
             } else
             {
-                <span class="text-muted">You can only refresh in @Model.Cooldown minutes <br /> (@Model.CooldownText)</span>
+                <span class="text-muted">You can only refresh in @Model.Cooldown minutes</span>
             }
             
         </p>
