--- a/LastMinutes/Views/LastMinutes/ReleaseNotes.cshtml
+++ b/LastMinutes/Views/LastMinutes/ReleaseNotes.cshtml
@@ -21,6 +21,17 @@
 <div class="col col-md-11 col-lg-10 d-flex px-0 mx-2 justify-content-center mx-auto my-auto">
     <div class="p-2 px-1 text-white">
 
+
+        <div class="row my-4">
+            <h5>Beta10628</h5>
+            <span>
+                <ul>
+                    <li>The "special accounts" system is now removed. Anybody can view their minutes for any time frame!</li>
+                    <li>Total app stats will now be displayed on the home page.</li>
+                </ul>
+            </span>
+        </div>
+
         <div class="row my-4">
             <h5>Beta10318</h5>
             <span>
