--- a/LastMinutes/Views/Shared/_Layout_LandingPage.cshtml
+++ b/LastMinutes/Views/Shared/_Layout_LandingPage.cshtml
@@ -98,7 +98,7 @@
         </div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-    <script src="~/js/bootstrap.bundle.min.js"></script>
+    <script src="/js/bootstrap/bootstrap.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
