Updated app version, release notes and FAQ. Added a feature to remove leaderboard entries.

--- a/LastMinutes/Views/LastMinutes/FaqPage.cshtml
+++ b/LastMinutes/Views/LastMinutes/FaqPage.cshtml
@@ -66,7 +66,20 @@
         <div class="row my-5">
             <h5>What about Privacy?</h5>
             <span>
-                This tool only has access to data which is already accessible publicly. Your result is stored in a database, the only data being stored is your total listening time, top scrobbles and bad scrobbles. That's all. You can also click "Delete Results" which will permanently delete any data relating to you from this tool, otherwise your results will be automatically removed after 24 hours.
+                This tool only has access to data which is already accessible publicly. Your result is stored in a database, the only data being stored is your total listening time, top scrobbles and bad scrobbles. This record will be automatically deleted within 24 hours.
+                <br>
+                <br />
+                By default, any results done on <i>The Last Month</i> time frame will automatically be saved to the leaderboard. This 'save' will only contain your username, total minutes and the date of the result. This data will be stored for up to 72 days. If you would like your entry to be removed from the database, please message me on Reddir or Last.FM so I can remove it manually.
+            </span>
+        </div>
+
+        <div class="row my-5">
+            <h5>The Leaderboard</h5>
+            <span>
+                When using the <b>The Last Month</b> time frame, by default, your result will be submitted to the leaderboard. You can opt out from the submission by clicking on 'More Options' on the landing page. Your results will be stored for three months before automatically being removed. You can also request to have your entry deleted.
+                <br />
+                <br />
+                If you already have an existing entry on the leaderboard, it will be overwritten if your latest result has a higher value of listening time.
             </span>
         </div>
 
