--- a/LastMinutes/Views/LastMinutes/ReleaseNotes.cshtml
+++ b/LastMinutes/Views/LastMinutes/ReleaseNotes.cshtml
@@ -23,6 +23,17 @@
 
 
         <div class="row my-4">
+            <h5>Beta10701</h5>
+            <span>
+                <ul>
+                    <li>There is now a leaderboard!</li>
+                    <li>Added a new area on the landing page to choose more options, such as submission to the leaderboard.</li>
+                </ul>
+            </span>
+        </div>
+
+
+        <div class="row my-4">
             <h5>Beta10628</h5>
             <span>
                 <ul>
