Preparing for fix, disabled queue processor for now

--- a/LastMinutes/Views/LastMinutes/ReleaseNotes.cshtml
+++ b/LastMinutes/Views/LastMinutes/ReleaseNotes.cshtml
@@ -21,6 +21,14 @@
 <div class="col col-md-11 col-lg-10 d-flex px-0 mx-2 justify-content-center mx-auto my-auto">
     <div class="p-2 px-1 text-white">
 
+        <div class="row my-4">
+            <h5>Beta11018</h5>
+            <span>
+                <ul>
+                    <li>LastMinutes has been temporarily disabled as the queue was not processing. I am looking into this, and intend to fix it as soon as possible.</li>
+                </ul>
+            </span>
+        </div>
 
         <div class="row my-4">
             <h5>Beta10701</h5>
