--- a/LastMinutes/Views/LastMinutes/Results/Index.cshtml
+++ b/LastMinutes/Views/LastMinutes/Results/Index.cshtml
@@ -51,7 +51,7 @@
         <p>
             @if (Model.CanRefresh)
             {
-                <a asp-action="Refresh" asp-controller="LastMinutes" asp-route-Username="@Model.Username" class=" link-secondary text-decoration-none goldhover "><b>Delete Results</a>
+                <a asp-action="Refresh" asp-controller="LastMinutes" asp-route-Username="@Model.Username" class=" link-secondary text-decoration-none goldhover "><b>Delete Results</b></a>
             } else
             {
                 <span class="text-muted">You can only refresh in @Model.Cooldown minutes</span>
