--- a/LastMinutes/Views/LastMinutes/LandingPage.cshtml
+++ b/LastMinutes/Views/LastMinutes/LandingPage.cshtml
@@ -48,7 +48,8 @@
         <div class="col my-4">
 
             <h5>Enter your Last.FM Username Below</h5>
-            <p>to see how many minutes you've listened to!</p>
+            <p>to see how many minutes you've listened to!<br/>
+                <b>Something is wrong and queue processing is failing. I will look into this and fix it ASAP. For now, new submissions are disabled.</b></p>
 
             <form asp-action="CheckMinutes" asp-controller="LastMinutes" method="POST">
 
@@ -101,7 +102,7 @@
                     <div class="col-12 my-1">
 
                         <div class="col-12 col-md-4 d-grid gap-2 my-2">
-                            <button type="submit" class="btn btn-outline-light mb-3">View Results</button>
+                            <button type="button" class="btn btn-outline-light mb-3" disabled>View Results</button>
                         </div>
 
                     </div>
