--- a/LastMinutes/Views/LastMinutes/LandingPage.cshtml
+++ b/LastMinutes/Views/LastMinutes/LandingPage.cshtml
@@ -102,7 +102,7 @@
                     <div class="col-12 my-1">
 
                         <div class="col-12 col-md-4 d-grid gap-2 my-2">
-                            <button type="button" class="btn btn-outline-light mb-3" disabled>View Results</button>
+                            <button type="submit" class="btn btn-outline-light mb-3">View Results</button>
                         </div>
 
                     </div>
