"Fixed" the issue, build is now working normally.

--- a/LastMinutes/Views/LastMinutes/LandingPage.cshtml
+++ b/LastMinutes/Views/LastMinutes/LandingPage.cshtml
@@ -48,8 +48,8 @@
         <div class="col my-4">
 
             <h5>Enter your Last.FM Username Below</h5>
-            <p>to see how many minutes you've listened to!<br/>
-                <b>Something is wrong and queue processing is failing. I will look into this and fix it ASAP. For now, new submissions are disabled.</b></p>
+            <p>to see how many minutes you've listened to!
+                </p>
 
             <form asp-action="CheckMinutes" asp-controller="LastMinutes" method="POST">
 
