--- a/LastMinutes/Views/LastMinutes/ReleaseNotes.cshtml
+++ b/LastMinutes/Views/LastMinutes/ReleaseNotes.cshtml
@@ -22,10 +22,13 @@
     <div class="p-2 px-1 text-white">
 
         <div class="row my-4">
-            <h5>Beta11018</h5>
+            <h5>Beta11018-a</h5>
+            <p>I noticed that LastMinutes was not working for potentially, quite a while, I'm not exactly sure what caused the issue but it has been resolved.</p>
             <span>
                 <ul>
-                    <li>LastMinutes has been temporarily disabled as the queue was not processing. I am looking into this, and intend to fix it as soon as possible.</li>
+                    <li>Cleared old process queue as it was failing for some reason.</li>
+                    <li>Updated database table for track cache to include information about the search, in order to help improve accuracy.</li>
+                    <li>LastMinutes should be functioning normally now.</li>
                 </ul>
             </span>
         </div>
